appId: com.starry.greenstash
name: "2. Goal Creation Flow"
---
- launchApp:
    appId: "com.starry.greenstash"
    clearState: false
    stopApp: true
    permissions:
      notifications: allow
      android.permission.ACCESS_FINE_LOCATION: deny
# Navigate to create a new goal
- assertVisible: "New Goal"
- tapOn: "New Goal"
# Fill in goal details
- assertVisible: "Goal Image"
- tapOn: "Goal Image"
- tapOn:
    id: com.google.android.gms.optional_photopicker:id/icon_thumbnail
    index: 3
- assertVisible: "Select icon for your goal"
- tapOn: "Select icon for your goal"
- tapOn:
    point: "45%,30%"

- scrollUntilVisible:
      element:
        text: "Goal Title"
      direction: DOWN
      timeout: 10000
      speed: 50
- tapOn: "Goal Title"
- inputText: "Vacation Fund"
- tapOn: "Target Amount"
- inputText: "5000"
- tapOn: "Done"
#- scroll
- scrollUntilVisible:
      element:
        text: "Deadline (Optional)"
      direction: DOWN
      timeout: 10000
      speed: 50
- tapOn: "Deadline (Optional)"
- tapOn: "30"
- tapOn: "Ok"
- tapOn: "Set New Saving Goal"
- assertVisible: "Vacation Fund"
- assertVisible: "You're off to great start!
    Currently saved IDR0 out of IDR5,000"
- assertVisible: '.*You have until 30/11/2025.*'





    